# reflectivity_ui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: actions.yml  ornl-prod.yml  test-code-cov.yml  unittest.yml
build_tools/: pylint.rc  travis_ci_build.sh
conda.recipe/: meta.yaml
designer/: ui_compare_widget.ui  ui_main_window.ui  ui_reduce_dialog.ui  ui_result_viewer.ui
docs/: conf.py  index.rst
docs/api/: modules.rst  reflectivity_ui.config.rst  reflectivity_ui.interfaces.data_handling.rst  reflectivity_ui.interfaces.event_handlers.rst  reflectivity_ui.interfaces.rst  reflectivity_ui.rst  reflectivity_ui.ui.rst
docs/developer/: documentation.rst  environment.rst  highlevel_design.rst  index.rst  integration_test.rst  overview.rst  release.rst  ui_developmentGuide.rst  ui_test.rst
docs/releasenotes/: index.md  index.rst
docs/user/: dead_time_correction.rst  index.rst
docs/users/: index.rst
docs/users/tutorial/: index.rst
icons/: icons.qrc
reflectivity_ui/: __init__.py
reflectivity_ui/config/: __init__.py  gui.py  plotting.py  settings.json
reflectivity_ui/interfaces/: __init__.py  configuration.py  data_manager.py  instrument.py  main_window.py  plot_handler.py  plotting.py  reduction_dialog.py  result_viewer.py  smooth_dialog.py
reflectivity_ui/interfaces/data_handling/: DeadTimeCorrection.py  __init__.py  data_info.py  data_info.py.BACKUP.207269.py  data_info.py.BASE.207269.py  data_info.py.LOCAL.207269.py  data_manipulation.py  data_set.py  filepath.py  gisans.py  instrument.py  loader.py  mantid_utils.py  off_specular.py  peak_finding.py  processing_workflow.py  quicknxs_io.py
reflectivity_ui/interfaces/event_handlers/: configuration_handler.py  file_handler.py  main_handler.py  plot_handler.py  progress_reporter.py  status_bar_handler.py  widgets.py
reflectivity_ui/ui/: compare_plots.py  deadtime_entry.py  deadtime_settings.py  mplwidget.py  ui_compare_widget.ui  ui_main_window-edit.ui  ui_main_window.ui  ui_reduce_dialog.ui  ui_result_viewer.ui  ui_smooth_dialog.ui
test/: __init__.py  conftest.py  data_handling_test.py
test/comparison/: Offspec_comparison.ipynb  general_comparison.ipynb  gisans_comparison.ipynb  plot_utils.py  readme.md
test/comparison/v1/: REF_M_30806+30807+30808_Specular_all_set_1.py
test/comparison/v2/: REF_M_30806+30807+30808_Specular_all.py  REF_M_30806+30807+30808_Specular_all_set_1.py
test/data/: remote_files.json  remote_files.py
test/notebooks/: datasets.py  event_reduction.py  events_based_reduction.ipynb  plot_utils.py
test/ui/: test_deadtime_entry.py  test_deadtime_settings.py  test_dialog_box.py  test_losing_direct_beam.py  test_main_window.py  test_missing_cross_section.py  test_mplwidget.py  test_reflectivity_extraction_global.py  test_status_bar.py  ui_utilities.py
test/unit/: test_merge_runs.py
test/unit/reflectivity_ui/config/: test_settings.py
test/unit/reflectivity_ui/interfaces/: test_configuration.py  test_data_manager.py
test/unit/reflectivity_ui/interfaces/data_handling/: test_data_handling.py  test_data_manipulation.py  test_data_set.py  test_dead_time_correction.py  test_filepath.py  test_gisans.py  test_instrument.py  test_off_specular.py  test_quicknxs_io.py
test/unit/reflectivity_ui/interfaces/event_handlers/: test_main_handler.py
