[metadata]
name = reflectivity_ui
description = Magnetic Reflectivity Reduction
author = SAE team
url = https://github.com/neutrons/reflectivity_ui
long_description = file: README.md
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires >= 3.8
packages = find:
install_requires =
    numpy
    matplotlib
    mantid

tests_require =
    pytest
    pytest-qt
    pytest-cov
    pytest-xvfb

[options.package_data]
* =
    *.gx
    *.json
    *.ui

[bdist]
formats = rpm

[bdist_rpm]
requires = python, numpy, mantid, matplotlib
build_requires = python, python-setuptools, versioningit
doc_files = README.md

# configure options here to work for all sub-packages
[flake8]
ignore = E402 E722 E741 F821 F841 E203 W503 F401 E712 E713 F811
max-line-length = 150

[tool:pytest]
test_paths = test/unit/refelectivity_ui

[coverage:run]
source = reflectivity_ui
omit = test/*
