[metadata]
name = reflectivity_ui
description = Magnetic Reflectivity Reduction
author = SAE team
url = https://github.com/neutrons/reflectivity_ui
long_description = file: README.md
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires >= 3.10
packages = find:
install_requires =
    mantid>=6.7
    matplotlib
    qtpy
tests_require =
    pytest
    pytest-qt
    pytest-cov
    pytest-xvfb
scripts =
    bin/RefRedM
    bin/quicknxs2

[options.packages.find]
exclude =
    test*

[options.package_data]
* =
    *.gx
    *.json
    *.ui

# configure options here to work for all sub-packages
[flake8]
ignore = E402 E722 E741 F821 F841 E203 W503 F401 E712 E713 F811
max-line-length = 150

[coverage:run]
source = reflectivity_ui
omit = test/*

[pytest]
qt_log_format = {rec.when} {rec.type_name}: {rec.message}
